Closed Bug 93331 Opened 23 years ago Closed 23 years ago

Printing broken on OpenVMS

Categories

(Core :: Printing: Output, defect)

DEC
OpenVMS
defect
Not set
blocker

Tracking

()

VERIFIED FIXED

People

(Reporter: colin, Assigned: dcone)

Details

(Whiteboard: awaiting super-review)

Attachments

(3 files)

A recent change in nsPostScriptObj.cpp broke printing on OpenVMS (the OpenVMS code got put into an else clause that never gets executed). I have a patch and will submit it. Can someone check it in to the trunk?
can you paste in the snippet of code.. not the diffs so I can see what happened.. I can tell from that diff.. and the patch utility, well I have never been able to get that to work consistently.. because of all different versions.. etc..
The {} for the else got added around the VMS ifdef. That's the problem!
r=dcone
Attaching new (identical) patch for the trunk. Note that the only functional change is to move the closing paren; the rest of the changes are just playing with the indentation. Will mail Brendan for a super-review.
Whiteboard: awaiting super-review
Use PR_snprintf() to avoid buffer overrun.
Thanks, only one more question...do we leak |mPrintSetup->filename| on every platform but OpenVMS? Or are we free()-ing it twice here? ;-)
On OpenVMS, if we're dealing with a real printer, then filename gets set to an address that comes back from tempnam(). This needs free'ing. On other platforms the contents of filename shouldn't be free'd.
Chris, could I trouble you for an sr= on this one? Thanks, Colin.
gotcha, sr=waterson
Checked in. Marking fixed. For the record, its fixed on the trunk (M0.9.4). I fixed my local M0.9.3 build before submitting the OpenVMS M0.9.3 build to Mozilla/Compaq.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Colin, can you verify this and mark this bug VERIFIED? thanks..
My fix is in. Marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: