Fix OpenVMS breakage - someone moved my code into an ELSE. Alos use PR_snprintf intead of sprintf. b=93331 r=dcone sr=waterson